--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ main {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 10px;
-    width: 120px;
+    width: 123px;
     text-align: center;
     cursor: pointer;
     transition: transform 0.3s;
@@ -189,4 +189,27 @@ main {
     display: inline-block;
     min-width: 20px;
     text-align: center;
+}
+#cart-items {
+    margin: 0 auto;  /* Это центрирует таблицу по горизонтали */
+    width: 80%;      /* Задаёт ширину таблицы (вы можете изменить это значение) */
+    border-collapse: collapse;
+    transform: translateX(-5%);
+}
+
+#cart-items td {
+    padding: 5px;
+    text-align: center;
+}
+
+#cart-items tr {
+    border-bottom: 1px solid #ddd;
+}
+
+#cart-items tr:last-child {
+    border-bottom: none;
+}
+#cart-overlay-content {
+    max-width: 100%;
+    overflow-x: auto;
 }
